--- a/app/views/partials/header.pug
+++ b/app/views/partials/header.pug
@@ -15,7 +15,7 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-dark.navbar-shrink.fixed-top
           a.nav-link(href='#about') About
         li.nav-item
           a.nav-link(href='#team') Team
-        - if (!user)
+        - if (!User)
           li.nav-item
             a.nav-link(href='/api/v1/auth/signin') Login
         - else
@@ -23,6 +23,6 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-dark.navbar-shrink.fixed-top
             a.nav-link(href='/carts') Cart
           li.nav-item
             form.nav-link(method='POST' action='/auth?_method=DELETE')
-              img(style='width: 40px; height: 40px; border-radius: 50%' src=`${user.avatarUrl}`)
+              img(style='width: 40px; height: 40px; border-radius: 50%' src=`${User.avatarUrl}`)
               button.btn.btn-danger(type="submit")
                 | Logout
