--- a/app/views/auth.view/forgotpassword.pug
+++ b/app/views/auth.view/forgotpassword.pug
@@ -27,45 +27,23 @@ html
       include ../partials/flash
       .container
         .row
-          .col-md-4.login-sec
-            h2.text-center Login Now
-            | &#x9;&#x9;    
-            form(action='/api/v1/auth' method='POST')
-              .row
-                .col-12.mb-3
-                  .input-group.form-group
-                    .input-group-prepend
-                      span.input-group-text
-                        i.fa.fa-user
-                    input.form-control(type='text' name='email' placeholder='Email')
-                .col-12.mb-3
-                  .input-group.form-group
-                    .input-group-prepend
-                      span.input-group-text
-                        i.fa.fa-key
-                    input.form-control(type='password' name='password' placeholder='Password')
-                .col-12.mb-3.text-center
-                  .form-group
-                    button.btn.btn-signup(type='submit' value='SignIn') Sign In
-                .col-12.mb-3.text-center
-                  .form-group
-                    button.btn.btn-signup(type='submit' value='Signup')
-                      a.nav-link(href='/api/v1/auth/signup') SignUp
-                .col-12.mb-3.text-center
-                  .form-group
-                    button.btn.btn-signup(type='submit' value='Signup')
-                      a.nav-link(href='/api/v1/auth/forgotpassword') Forgot Password
-                .col-12.mb-3.text-center
-                  .form-group
-                    a.btn.btn-google.btn-block(href='/api/v1/auth/google')
-                      i.fa.fa-google-plus-square
-                      |  Đăng nhập bằng Google
+          .col-md-4.login-sec.d-flex.align-items-center
+            .content
+              h2.text-center Forgot Password Now
+              | &#x9;&#x9;    
+              form(action='/api/v1/auth/forgotpassword' method='POST')
+                .row
+                  .col-12.mb-3
+                    .input-group.form-group
+                      .input-group-prepend
+                        span.input-group-text
+                          i.fa.fa-user
+                      input.form-control(type='text' name='email' placeholder='Email')
+                  .col-12.mb-3.text-center
+                    .form-group
+                      button.btn.btn-signup(type='submit' value='Forgotpassword') Forgot Password
 
-            .copy-text
-              | Created with 
-              i.fa.fa-heart
-              |  by Grafreez
-          | &#x9;&#x9;
+
           .col-md-8.banner-sec
             #carouselExampleIndicators.carousel.slide(data-ride='carousel')
               ol.carousel-indicators
