--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -5,6 +5,8 @@ html
     link(rel="stylesheet" href="/css/bootstrap.min.css")
     link(rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css")
     link(rel="stylesheet" href="/stylesheets/style.css")
+    link(rel="stylesheet" href="/stylesheets/profile/editprofile.css")
+
   body
     #app
       include partials/header
