--- a/app/assets/stylesheets/profile/editprofile.css
+++ b/app/assets/stylesheets/profile/editprofile.css
@@ -415,3 +415,67 @@ nav.menu ul li a:hover {
   color: #FF7008;
   font-weight: bold;
 }
+
+nav.pagination-nav {
+  text-align: center;
+  margin-top: 20px;
+}
+
+ul.pagination {
+  display: inline-flex;
+  list-style-type: none;
+  padding-left: 0;
+  border-radius: 0.25rem;
+}
+
+.page-item {
+  margin: 0 5px;
+}
+
+.page-item a.page-link {
+  color: #FF7008;
+  text-decoration: none;
+}
+
+.page-item.active a.page-link {
+  background-color: #FF7008;
+  border-color: #FF7008;
+  color: #fff;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-img-top {
+  object-fit: cover;
+  width: 100%;
+  height: 180px;
+}
+
+.card-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* Hiển thị tối đa 3 dòng */
+  -webkit-box-orient: vertical;
+}
+
+.row.d-flex.justify-content-center {
+  display: flex;
+  justify-content: center;
+}
+
+.row.justify-content-center {
+  display: flex;
+  justify-content: center;
+}
+
+.card-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
