--- a/app/views/auth.view/signup.pug
+++ b/app/views/auth.view/signup.pug
@@ -12,7 +12,7 @@ html
         .row
           .col-md-4.signup-sec
             h2.text-center Sign Up Now
-            form.signup-form(action='/api/v1/auth/signup' method="POST")
+            form.signup-form(action='/api/v1/auth/signup' method="POST" enctype="multipart/form-data")
               .form-group
                 label.text-uppercase(for='username') Username
                 input#username.form-control(type='text' placeholder='Username' name='username')
@@ -22,8 +22,9 @@ html
               .form-group
                 .image-upload
                   label(for='file-input' ) 
-                    img#preview(style='width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;' src=`https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/128/Downloads-icon.png` alt='Avatar')
+                    img#preview.img-fluid(style='width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;' src=`https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/128/Downloads-icon.png` alt='Avatar')
                   input#file-input.d-none(type='file' name='avatar')
+
                   script.
                     const inputTag = document.getElementById('file-input');
                     const previewImageTag = document.getElementById('preview');
