--- a/app/views/home.view/index.pug
+++ b/app/views/home.view/index.pug
@@ -1,36 +1,61 @@
 extends ../layout
 
 block content
-  header.masthead
-    .container
-      .masthead-subheading Welcome To Our Studio!
-      .masthead-heading.text-uppercase It&apos;s Nice To Meet You
-      a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Tell Me More
-    script(type="text/javascript" src="/javascripts/navBar.js")
-  section#services.page-section
-    .container
-      .text-center
-        h2.section-heading.text-uppercase Services
-        h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
-      .row.text-center
-        .col-md-4
-          span.fa-stack.fa-4x
-            i.fa.fa-circle.fa-stack-2x.text-primary
-            i.fa.fa-shopping-cart.fa-stack-1x.fa-inverse
-          h4.my-3 E-Commerce
-          p.text-muted
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-        .col-md-4
-          span.fa-stack.fa-4x
-            i.fa.fa-circle.fa-stack-2x.text-primary
-            i.fa.fa-laptop.fa-stack-1x.fa-inverse
-          h4.my-3 Responsive Design
-          p.text-muted
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
-        .col-md-4
-          span.fa-stack.fa-4x
-            i.fa.fa-circle.fa-stack-2x.text-primary
-            i.fa.fa-lock.fa-stack-1x.fa-inverse
-          h4.my-3 Web Security
-          p.text-muted
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+
+  html
+    head
+      title Home Page
+      meta(charset="UTF-8")
+      meta(name="viewport" content="width=device-width, initial-scale=1.0")
+      link(rel="stylesheet" href="/stylesheets/home.css")
+
+    body
+      .container.mt-5
+        // Carousel component
+        #carouselExampleIndicators.carousel.slide(data-ride="carousel" data-interval="3000")
+          // Indicators
+          ol.carousel-indicators
+            li(data-target="#carouselExampleIndicators" data-slide-to="0" class="active")
+            li(data-target="#carouselExampleIndicators" data-slide-to="1")
+            li(data-target="#carouselExampleIndicators" data-slide-to="2")
+          // Carousel slides
+          .carousel-inner
+            .carousel-item.active
+              img(src="/images/banner/1.jpg" class="d-block w-100" alt="Banner 1")
+            .carousel-item
+              img(src="/images/banner/2.jpg" class="d-block w-100" alt="Banner 2")
+            .carousel-item
+              img(src="/images/banner/3.jpg" class="d-block w-100" alt="Banner 3")
+          // Controls
+          a.carousel-control-prev(href="#carouselExampleIndicators" role="button" data-slide="prev")
+            span.carousel-control-prev-icon(aria-hidden="true")
+            span.sr-only Previous
+          a.carousel-control-next(href="#carouselExampleIndicators" role="button" data-slide="next")
+            span.carousel-control-next-icon(aria-hidden="true")
+            span.sr-only Next
+
+        // Google Map container
+        #map(style="height: 500px; width: 100%;")
+
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js")
+
+    // Google Maps script
+    script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMYHRWHS-0T7pgR7MrzkYr-vIpzKEWXFk&callback=initMap" async defer)
+
+    // Google Maps initialization script
+    script.
+      function initMap() {
+        var center = { lat: 21.0285, lng: 105.8542 }; // Example: Hanoi, Vietnam
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: center,
+          zoom: 12
+        });
+
+        var marker = new google.maps.Marker({
+          position: center,
+          map: map,
+          title: 'Your Location'
+        });
+      }
