update_restaurant_feedback_dish

--- a/app/views/.view/index.pug
+++ b/app/views/.view/index.pug
@@ -33,7 +33,7 @@ block content
                     p.card-text.mb-3
                       strong Phone:
                       | #{restaurants.phone_number}
-                    a.btn.btn-outline-primary.btn-sm.text-uppercase.mt-2(href=`/api/v1/feedback/${restaurants.id}` style="color: #007bff; transition: background-color 0.3s, color 0.3s;") View Restaurant
+                    a.btn.btn-outline-primary.btn-sm.text-uppercase.mt-2(href=`/restaurant/${restaurants.id}` style="color: #007bff; transition: background-color 0.3s, color 0.3s;") View Restaurant
 
   // Hiệu ứng hover thẻ card
   style.
