--- a/app/views/partials/header.pug
+++ b/app/views/partials/header.pug
@@ -14,7 +14,7 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-dark.navbar-shrink.fixed-top
         li.nav-item
           a.nav-link(href='/api/v1/restaurant') Trải Nghiệm
         li.nav-item
-          a.nav-link(href='/api/v1/contact') Liên Hệ
+          a.nav-link(href='/api/v1/feedback') Liên Hệ
         - if (!User)
           li.nav-item
             a.nav-link(href='/api/v1/auth/signin') Login
