--- a/app/views/feedback.view/index.pug
+++ b/app/views/feedback.view/index.pug
@@ -5,7 +5,7 @@ block content
     head
       link(rel="stylesheet" href="/stylesheets/feedback/feedback.css")
 
-    header.masthead
+    header.masthead(style="height: 400px; object-fit: cover;  center/cover no-repeat;")
       .container
         .masthead-subheading Welcome to the Restaurant
       script(type="text/javascript" src="/javascripts/navBar.js")  
