--- a/app/views/partials/footer.pug
+++ b/app/views/partials/footer.pug
@@ -1,3 +1,7 @@
+html
+  head
+    title= "Món Ăn"
+    link(rel="stylesheet" href="/stylesheets/profile/editprofile.css")
 footer.footer.bg-dark.text-white.pt-5
   .container
     // Logo và tên
